# rogona

./: .gitignore  BER.py  Cargo.toml  Pipfile  README.md  license  paper.py  paper2.py  study1_0.py  study1_1.py  study1_2_notes.py  study2.py  study2_1_old.py  study3.py  study4.py  study5.py  study6.py  study7.py  study7_2.py  study8.py  visualizer.py
base_configs/learn_sequences/: study1.txt  study3.txt  study7.txt
base_configs/msg/: msg_f_1.txt  msg_f_3.txt  msg_n_1.txt  msg_n_3.txt  msg_n_7.txt
base_configs/paper/: info.txt
base_configs/study1/: info.txt  sim_d_160_dy_0.yaml  sim_d_160_dy_8.yaml  sim_d_240_dy_0.yaml  sim_d_240_dy_8.yaml  sim_d_320_dy_0.yaml  sim_d_320_dy_8.yaml
base_configs/study2/: info.txt  sim_20_30.yaml  sim_20_55.yaml  sim_20_80.yaml  sim_45_30.yaml  sim_45_55.yaml  sim_70_30.yaml
base_configs/study3_full/: info.txt  sim_100_d_2.8.yaml  sim_100_d_3.2.yaml  sim_50_d_1.2.yaml  sim_50_d_1.6.yaml  sim_75_d_1.6.yaml  sim_75_d_2.0.yaml  sim_75_d_2.4.yaml  sim_75_d_2.8.yaml
base_configs/study4/: info.txt
base_configs/study5/: info.txt
base_configs/study6/: info.txt
base_configs/study7/: info.txt
base_configs/study8/: info.txt
sim2vid/: Pipfile  Snakefile  experiments.snakemake_config.yaml  scripts.py  scripts_8.py  sig2liv.py  sig2liv_8.py
sim2vid/livs/: L_1.txt  L_2.txt  L_3.txt  L_4.txt  L_5.txt  L_6.txt  L_7.txt  L_8.txt  L_9.txt  d_160_dy_0_mps_1000.txt  d_160_dy_0_mps_1200.txt  d_160_dy_0_mps_1400.txt  d_160_dy_0_mps_800.txt  d_160_dy_8_mps_1000.txt  d_160_dy_8_mps_1200.txt  (+18 more)
src/: config_yaml.rs  lib.rs  main.rs
(+1276 files in other folders)
