[package]
name = "rogona_ab_molcom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nalgebra = "0.24.0"
ndarray = "0.15.6"
openfoamparser = "0.1.2"
rstar = "0.9.2"
enum-iterator = "0.7.0"
log = "0.4"
rand = "0.8.3"
nalgebra-glm = "0.3"
relative-path = "1.6.1"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9.14"
env_logger = "0.9.0"
queues = "1.0.2"
rand_distr = "0.4.3"
# kmeans = "0.2.0" can't be used because it is rust nightly...
linfa = "0.6.0"
linfa-clustering = "0.6.0"
itertools = "0.7.7"
itertools-num = "0.1.3"
statrs = "0.16.0"
voracious_radix_sort = "1.1.0"

csv = "1.1"
plotters = "0.3.4"
fast-float = "0.2"

#[env]

#RUST_LOG = { value = "info", force = true }
